--- a/variants/variant0.tex
+++ b/variants/variant0.tex
@@ -1,3 +1,69 @@
-\subsection*{Билет №0}
+\Ticket{0}
 
-Привет
+\TaskTag[progress]{№0.3}
+\begin{cond}
+	Решить краевую задачу для ограниченной струны:
+	\[
+		\begin{cases}
+			u_{tt} = 4u_{xx} + (2 - t)\sin (\frac{\pi x}{2}), & t > 0,\; x \in (0,2), \\
+			u|_{x=0} = u|_{x=2},                                                      \\
+			u|_{t=0} = 3 \sin (2\pi x),\quad u_t|_{t=0} = 0.
+		\end{cases}
+	\]
+\end{cond}
+
+\begin{sol}
+
+\end{sol}
+
+\begin{out}
+
+\end{out}
+
+\TaskTag[progress]{№0.4}
+\begin{cond}
+	Найти решение задачи Коши:
+	\[
+		\begin{cases}
+			u_{tt} = 4\Delta u, \\
+			u|_{t=0} = 2xyz,\quad u_t|_{t=0} = \cosh (x),
+		\end{cases}
+		\qquad
+		u = u(t,x,y,z),\ (x,y,z)\in\mathbb{R}^3,\ t>0.
+	\]
+\end{cond}
+
+\begin{sol}
+
+\end{sol}
+
+\begin{out}
+
+\end{out}
+
+\TaskTag[progress]{№0.5}
+\begin{cond}
+	Вычислить производные всех порядков в смысле теории обобщённых функций:
+	\[
+		f(x) =
+		\begin{cases}
+			-4,       & x \le 0,     \\
+			-(x-2)^2, & x \in (0,2), \\
+			0,        & x \ge 2.
+		\end{cases}
+	\]
+\end{cond}
+
+\TaskTag[progress]{№0.6}
+\begin{cond}
+	В пространстве $D'(\mathbb{R})$ найти общее решение уравнения ($\eta(x)$ - функция Хэвисайда)
+	$y'' + 4y' + 3y = -\eta(x)$.
+\end{cond}
+
+\begin{sol}
+
+\end{sol}
+
+\begin{out}
+
+\end{out}
