--- a/variants/variant1.tex
+++ b/variants/variant1.tex
@@ -7,7 +7,7 @@
 
 \TaskTag[todo]{№1.2}
 \begin{cond}
-	Пространство обобщённых функций \(D'(\Omega)\). Примеры: регулярные обобщённые функции, \(\delta\)-функция.
+	Пространство обобщённых функций $D'(\Omega)$. Примеры: регулярные обобщённые функции, $\delta$-функция.
 \end{cond}
 
 \TaskTag[todo]{№1.3}
@@ -22,7 +22,7 @@
 	\]
 \end{cond}
 
-\TaskTag[todo]{№1.4}
+\TaskTag[progress]{№1.4}
 \begin{cond}
 	Найти решение задачи Коши:
 	\[
@@ -34,6 +34,14 @@
 		u = u(t,x,y),\ (x,y)\in\mathbb{R}^2,\ t>0.
 	\]
 \end{cond}
+
+\begin{sol}
+
+\end{sol}
+
+\begin{out}
+
+\end{out}
 
 \TaskTag[todo]{№1.5}
 \begin{cond}
