Update LaTeX conditions and tasks in variant files for clarity and consistency

--- a/variants/variant1.tex
+++ b/variants/variant1.tex
@@ -62,8 +62,5 @@
 \TaskTag[todo]{№1.6}
 \begin{cond}
 	В пространстве \(D'(\mathbb{R})\) найти общее решение уравнения
-
-	\(
-	y'' + 2y' + 2y = -2\delta'(x).
-	\)
+	$y'' + 2y' + 2y = -2\delta'(x)$.
 \end{cond}
