--- a/variants/variant10.tex
+++ b/variants/variant10.tex
@@ -1,1 +1,58 @@
 \Ticket{10}
+
+\TaskTag[todo]{№10.1}
+\begin{cond}
+	Распространение волн в пространствах различных размерности. Качественные различия.
+\end{cond}
+
+\TaskTag[todo]{№10.2}
+\begin{cond}
+	Построение фундаментального решения обыкновенного линейного дифференциального уравнения.
+\end{cond}
+
+\TaskTag[todo]{№10.3}
+\begin{cond}
+	Решить краевую задачу для ограниченной струны:
+
+	\(
+	\begin{cases}
+		u_{tt} = 4u_{xx} + \cos 2t \,\sin 3x,                                               \\
+		u|_{x=0} = u|_{x=\frac{\pi}{2}} = 0, & t > 0,\; x \in \left(0,\frac{\pi}{2}\right), \\
+		u|_{t=0} = 0,\quad u_t|_{t=0} = 2\sin x.
+	\end{cases}
+	\)
+\end{cond}
+
+\TaskTag[todo]{№10.4}
+\begin{cond}
+	Найти решение задачи Коши:
+
+	\(
+	\begin{cases}
+		u_{tt} = 25\Delta u - e^{-t}y, \\
+		u|_{t=0} = 0,\quad u_t|_{t=0} = (x+1)^2 (y-1)^2,
+	\end{cases}
+	\qquad
+	u = u(t,x,y),\ (x,y)\in\mathbb{R}^2,\ t>0.
+	\)
+\end{cond}
+
+\TaskTag[todo]{№10.5}
+\begin{cond}
+	Вычислить производные всех порядков в смысле теории обобщённых функций:
+
+	\(
+	f(x) =
+	\begin{cases}
+		3(x+1)^2, & x \in (-1,0), \\
+		3,        & x \ge 0,      \\
+		1,        & x \le -1.
+	\end{cases}
+	\)
+\end{cond}
+
+\TaskTag[todo]{№10.6}
+\begin{cond}
+	В пространстве \(D'(\mathbb{R})\) найти общее решение уравнения
+	$y'' + 4y = -4\delta(x)$.
+\end{cond}
