--- a/variants/variant2.tex
+++ b/variants/variant2.tex
@@ -1,1 +1,58 @@
 \Ticket{2}
+
+\TaskTag[todo]{№2.1}
+\begin{cond}
+	Формула Даламбера. Существование решения задачи Коши для уравнения колебаний струны.
+\end{cond}
+
+\TaskTag[todo]{№2.2}
+\begin{cond}
+	Теорема существования обобщённого решения уравнения Пуассона.
+\end{cond}
+
+\TaskTag[todo]{№2.3}
+\begin{cond}
+	Решить краевую задачу для ограниченной струны:
+
+	\(
+	\begin{cases}
+		u_{tt} = 4u_{xx} + \cos 2t \sin 3x,                                                 \\
+		u|_{x=0} = u|_{x=\frac{\pi}{2}} = 0, & t > 0,\; x \in \left(0,\frac{\pi}{2}\right), \\
+		u|_{t=0} = 0,\quad u_t|_{t=0} = 2\sin x.
+	\end{cases}
+	\)
+\end{cond}
+
+\TaskTag[todo]{№2.4}
+\begin{cond}
+	Найти решение задачи Коши:
+
+	\(
+	\begin{cases}
+		u_{tt} = 9\Delta u - txy, \\
+		u|_{t=0} = 0,\quad u_t|_{t=0} = e^{-2x},
+	\end{cases}
+	\qquad
+	u = u(t,x,y),\ (x,y)\in\mathbb{R}^2,\ t>0.
+	\)
+\end{cond}
+
+\TaskTag[todo]{№2.5}
+\begin{cond}
+	Вычислить производные всех порядков в смысле теории обобщённых функций:
+
+	\(
+	f(x) =
+	\begin{cases}
+		4 - x^2, & x \in (-2,0), \\
+		4,       & x \ge 0,      \\
+		2,       & x \le -2.
+	\end{cases}
+	\)
+\end{cond}
+
+\TaskTag[todo]{№2.6}
+\begin{cond}
+	В пространстве \(D'(\mathbb{R})\) найти общее решение уравнения
+	$y'' + 3y' - 4y = 3\delta(x)$.
+\end{cond}
