--- a/variants/variant3.tex
+++ b/variants/variant3.tex
@@ -1,1 +1,59 @@
 \Ticket{3}
+
+\TaskTag[todo]{№3.1}
+\begin{cond}
+	Метод Фурье для волнового уравнения в пространстве размерности $2$ (прямоугольник).
+\end{cond}
+
+\TaskTag[todo]{№3.2}
+\begin{cond}
+	Понятие обобщённой производной. Связь обобщённой производной и производной в смысле теории обобщённых функций. Пространства Соболева $H^1(\Omega)$ и $\dot{H}^1(\Omega)$, их полнота.
+\end{cond}
+
+\TaskTag[todo]{№3.3}
+\begin{cond}
+	Решить краевую задачу для ограниченной струны:
+
+	\(
+	\begin{cases}
+		u_{tt} = 16u_{xx} + (3 - e^{5t})\cos \pi x,          \\
+		u_x|_{x=0} = u_x|_{x=2} = 0, & t > 0,\; x \in (0,2), \\
+		u|_{t=0} = -2\cos 3\pi x,\quad u_t|_{t=0} = 0.
+	\end{cases}
+	\)
+\end{cond}
+
+\TaskTag[todo]{№3.4}
+\begin{cond}
+	Найти решение задачи Коши:
+
+	\(
+	\begin{cases}
+		u_{tt} = 16\Delta u, \\
+		u|_{t=0} = e^{2x - y},\quad u_t|_{t=0} = 3y^2,
+	\end{cases}
+	\qquad
+	u = u(t,x,y),\ (x,y)\in\mathbb{R}^2,\ t>0.
+	\)
+\end{cond}
+
+\TaskTag[todo]{№3.5}
+\begin{cond}
+	Вычислить производные всех порядков в смысле теории обобщённых функций:
+
+	\(
+	f(x) =
+	\begin{cases}
+		-(x - 2)^2, & x \in (0,2), \\
+		0,          & x \ge 2,     \\
+		-1,         & x \le 0.
+	\end{cases}
+	\)
+\end{cond}
+
+\TaskTag[todo]{№3.6}
+\begin{cond}
+	В пространстве \(D'(\mathbb{R})\) найти общее решение уравнения
+	($\eta(x)$ - функция Хэвисайда)
+	$y'' + 4y' + 4y = -2\eta(x)$.
+\end{cond}
