--- a/variants/variant4.tex
+++ b/variants/variant4.tex
@@ -1,1 +1,56 @@
 \Ticket{4}
+
+\TaskTag[todo]{№4.1}
+\begin{cond}
+\end{cond}
+
+\TaskTag[todo]{№4.2}
+\begin{cond}
+\end{cond}
+
+\TaskTag[todo]{№4.3}
+\begin{cond}
+	Решить краевую задачу для ограниченной струны:
+
+	\(
+	\begin{cases}
+		u_{tt} = u_{xx} + t e^{t}\cos\!\frac{x}{2},            \\
+		u_x|_{x=0} = u|_{x=\pi} = 0, & t > 0,\; x \in (0,\pi), \\
+		u|_{t=0} = 0,\quad u_t|_{t=0} = 4\cos\!\frac{3x}{2}.
+	\end{cases}
+	\)
+\end{cond}
+
+\TaskTag[todo]{№4.4}
+\begin{cond}
+	Найти решение задачи Коши:
+
+	\(
+	\begin{cases}
+		u_{tt} = \Delta u + (t+1)^2, \\
+		u|_{t=0} = -\cos 3x\,\sinh y,\quad u_t|_{t=0} = 0,
+	\end{cases}
+	\qquad
+	u = u(t,x,y),\ (x,y)\in\mathbb{R}^2,\ t>0.
+	\)
+\end{cond}
+
+\TaskTag[todo]{№4.5}
+\begin{cond}
+	Вычислить производные всех порядков в смысле теории обобщённых функций:
+
+	\(
+	f(x) =
+	\begin{cases}
+		4x - x^2, & x \in (0,2), \\
+		4,        & x \ge 2,     \\
+		1,        & x \le 0.
+	\end{cases}
+	\)
+\end{cond}
+
+\TaskTag[todo]{№4.6}
+\begin{cond}
+	В пространстве \(D'(\mathbb{R})\) найти общее решение уравнения
+	$y'' - 4y' + 3y = 2\delta'(x)$.
+\end{cond}
