--- a/variants/variant9.tex
+++ b/variants/variant9.tex
@@ -1,1 +1,58 @@
 \Ticket{9}
+
+\TaskTag[todo]{№9.1}
+\begin{cond}
+	Принцип Дюамеля. Формулы Кирхгофа и Пуассона для неоднородного волнового уравнения.
+\end{cond}
+
+\TaskTag[todo]{№9.2}
+\begin{cond}
+	Пространство основных функций $D(\Omega)$, примеры основных функций. Действия над основными функциями. Сходимость основных функций, примеры сходящихся и расходящихся последовательностей.
+\end{cond}
+
+\TaskTag[todo]{№9.3}
+\begin{cond}
+	Решить краевую задачу для ограниченной струны:
+
+	\(
+	\begin{cases}
+		u_{tt} = 9u_{xx} + (2t - 1)\sin 3\pi x,          \\
+		u|_{x=0} = u|_{x=1} = 0, & t > 0,\; x \in (0,1), \\
+		u|_{t=0} = -\sin 2\pi x,\quad u_t|_{t=0} = 0.
+	\end{cases}
+	\)
+\end{cond}
+
+\TaskTag[todo]{№9.4}
+\begin{cond}
+	Найти решение задачи Коши:
+
+	\(
+	\begin{cases}
+		u_{tt} = \Delta u + (t+1)^2, \\
+		u|_{t=0} = -\cos 3x\,\sinh y,\quad u_t|_{t=0} = 0,
+	\end{cases}
+	\qquad
+	u = u(t,x,y),\ (x,y)\in\mathbb{R}^2,\ t>0.
+	\)
+\end{cond}
+
+\TaskTag[todo]{№9.5}
+\begin{cond}
+	Вычислить производные всех порядков в смысле теории обобщённых функций:
+
+	\(
+	f(x) =
+	\begin{cases}
+		4x - x^2, & x \in (0,2), \\
+		3,        & x \ge 2,     \\
+		0,        & x \le 0.
+	\end{cases}
+	\)
+\end{cond}
+
+\TaskTag[todo]{№9.6}
+\begin{cond}
+	В пространстве \(D'(\mathbb{R})\) найти общее решение уравнения ($\eta(x)$ - функция Хэвисайда)
+	$y'' - 9y = -\eta(x)$.
+\end{cond}
