--- a/variants/variant5.tex
+++ b/variants/variant5.tex
@@ -1,1 +1,58 @@
 \Ticket{5}
+
+\TaskTag[todo]{№5.1}
+\begin{cond}
+	Метод спуска. Формула Пуассона для однородного волнового уравнения.
+\end{cond}
+
+\TaskTag[todo]{№5.2}
+\begin{cond}
+	Дифференцирование обобщённой функции. $\delta$-функция как производная функции Хэвисайда. Производные $\delta$-функции.
+\end{cond}
+
+\TaskTag[todo]{№5.3}
+\begin{cond}
+	Решить краевую задачу для ограниченной струны:
+
+	\(
+	\begin{cases}
+		u_{tt} = 9u_{xx} + (2t - 1)\sin 3\pi x,          \\
+		u|_{x=0} = u|_{x=1} = 0, & t > 0,\; x \in (0,1), \\
+		u|_{t=0} = -\sin 2\pi x,\quad u_t|_{t=0} = 0.
+	\end{cases}
+	\)
+\end{cond}
+
+\TaskTag[todo]{№5.4}
+\begin{cond}
+	Найти решение задачи Коши:
+
+	\(
+	\begin{cases}
+		u_{tt} = 25\Delta u - e^{-t}y, \\
+		u|_{t=0} = 0,\quad u_t|_{t=0} = (x+1)^2 (y-1)^2,
+	\end{cases}
+	\qquad
+	u = u(t,x,y),\ (x,y)\in\mathbb{R}^2,\ t>0.
+	\)
+\end{cond}
+
+\TaskTag[todo]{№5.5}
+\begin{cond}
+	Вычислить производные всех порядков в смысле теории обобщённых функций:
+
+	\(
+	f(x) =
+	\begin{cases}
+		3(x+1)^2, & x \in (-1,0), \\
+		1,        & x \ge 0,      \\
+		0,        & x \le -1.
+	\end{cases}
+	\)
+\end{cond}
+
+\TaskTag[todo]{№5.6}
+\begin{cond}
+	В пространстве \(D'(\mathbb{R})\) найти общее решение уравнения
+	$y'' - 2y' = -4\delta(x)$.
+\end{cond}
