--- a/variants/variant6.tex
+++ b/variants/variant6.tex
@@ -1,1 +1,56 @@
 \Ticket{6}
+
+\TaskTag[todo]{№6.1}
+\begin{cond}
+\end{cond}
+
+\TaskTag[todo]{№6.2}
+\begin{cond}
+\end{cond}
+
+\TaskTag[todo]{№6.3}
+\begin{cond}
+	Решить краевую задачу для ограниченной струны:
+
+	\(
+	\begin{cases}
+		u_{tt} = u_{xx} + \cos 2t \,\sin 3x,                                                \\
+		u|_{x=0} = u|_{x=\frac{\pi}{2}} = 0, & t > 0,\; x \in \left(0,\frac{\pi}{2}\right), \\
+		u|_{t=0} = 0,\quad u_t|_{t=0} = 2\sin x.
+	\end{cases}
+	\)
+\end{cond}
+
+\TaskTag[todo]{№6.4}
+\begin{cond}
+	Найти решение задачи Коши:
+
+	\(
+	\begin{cases}
+		u_{tt} = 4\Delta u, \\
+		u|_{t=0} = 2\cos y,\quad u_t|_{t=0} = x - 3y',
+	\end{cases}
+	\qquad
+	u = u(t,x,y),\ (x,y)\in\mathbb{R}^2,\ t>0.
+	\)
+\end{cond}
+
+\TaskTag[todo]{№6.5}
+\begin{cond}
+	Вычислить производные всех порядков в смысле теории обобщённых функций:
+
+	\(
+	f(x) =
+	\begin{cases}
+		2(x+1)^2, & x \in (0,1), \\
+		0,        & x \ge 1,     \\
+		3,        & x \le 0.
+	\end{cases}
+	\)
+\end{cond}
+
+\TaskTag[todo]{№6.6}
+\begin{cond}
+	В пространстве \(D'(\mathbb{R})\) найти общее решение уравнения
+	$y'' - 2y' + y = 3\eta(x)$ \;(\(\eta(x)\) — функция Хэвисайда).
+\end{cond}
