New definitions and modify conditions in variant files for clarity and consistency

--- a/main.tex
+++ b/main.tex
@@ -72,6 +72,10 @@
 \newenvironment{sol}{\par\noindent\textbf{Решение.}}{\par}
 \newenvironment{out}{\par\noindent\textbf{Вывод.}}{\par}
 
+\newcommand{\Definition}[2]{%
+  \noindent\textbf{Определение.} \textit{#1} --#2
+}
+
 % =========================== Документ ==========================
 \title{Случайные процессы}
 \date{Сентябрь 2025}
