--- a/variants/variant6.tex
+++ b/variants/variant6.tex
@@ -14,7 +14,7 @@
 
 	\(
 	\begin{cases}
-		u_{tt} = u_{xx} + \cos 2t \,\sin 3x,                                                \\
+		u_{tt} = 4u_{xx} + \cos 2t \,\sin 3x,                                               \\
 		u|_{x=0} = u|_{x=\frac{\pi}{2}} = 0, & t > 0,\; x \in \left(0,\frac{\pi}{2}\right), \\
 		u|_{t=0} = 0,\quad u_t|_{t=0} = 2\sin x.
 	\end{cases}
@@ -28,7 +28,7 @@
 	\(
 	\begin{cases}
 		u_{tt} = 4\Delta u, \\
-		u|_{t=0} = 2\cos y,\quad u_t|_{t=0} = x - 3y',
+		u|_{t=0} = 2\cos y,\quad u_t|_{t=0} = x - 3y,
 	\end{cases}
 	\qquad
 	u = u(t,x,y),\ (x,y)\in\mathbb{R}^2,\ t>0.
