--- a/variants/variant0.tex
+++ b/variants/variant0.tex
@@ -254,3 +254,391 @@
 		y(x)=\tfrac{1}{6}(3e^{-x}-e^{-3x}-2)\eta(x)+C_1e^{-x}+C_2e^{-3x}.
 	\]
 \end{out}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\TaskTag[todo]{№1.3} \begin{cond} Решить краевую задачу для ограниченной струны: \( \begin{cases} u_{tt} = 9u_{xx} + (2t - 1)\sin \pi3x, \\ u|_{x=0} = u|_{x=1} = 0, & t > 0,\; x \in (0,1), \\ u|_{t=0} = -\sin 2\pi x,\quad u_t|_{t=0} = 0. \end{cases} \) \end{cond} \TaskTag[todo]{№2.3} \begin{cond} Решить краевую задачу для ограниченной струны: \( \begin{cases} u_{tt} = 4u_{xx} + \cos 2t \sin 3x, \\ u|_{x=0} = u|_{x=\frac{\pi}{2}} = 0, & t > 0,\; x \in \left(0,\frac{\pi}{2}\right), \\ u|_{t=0} = 0,\quad u_t|_{t=0} = 2\sin x. \end{cases} \) \end{cond} \TaskTag[todo]{№3.3} \begin{cond} Решить краевую задачу для ограниченной струны: \( \begin{cases} u_{tt} = 16u_{xx} + (3 - e^{5t})\cos \pi x, \\ u_x|_{x=0} = u_x|_{x=2} = 0, & t > 0,\; x \in (0,2), \\ u|_{t=0} = -2\cos 3\pi x,\quad u_t|_{t=0} = 0. \end{cases} \) \end{cond} \TaskTag[todo]{№4.3} \begin{cond} Решить краевую задачу для ограниченной струны: \( \begin{cases} u_{tt} = u_{xx} + t e^{t}\cos\!\frac{x}{2}, \\ u_x|_{x=0} = u|_{x=\pi} = 0, & t > 0,\; x \in (0,\pi), \\ u|_{t=0} = 0,\quad u_t|_{t=0} = 4\cos\!\frac{3x}{2}. \end{cases} \) \end{cond} \TaskTag[todo]{№5.3} \begin{cond} Решить краевую задачу для ограниченной струны: \( \begin{cases} u_{tt} = 9u_{xx} + (2t - 1)\sin 3\pi x, \\ u|_{x=0} = u|_{x=1} = 0, & t > 0,\; x \in (0,1), \\ u|_{t=0} = -\sin 2\pi x,\quad u_t|_{t=0} = 0. \end{cases} \) \end{cond} \TaskTag[todo]{№6.3} \begin{cond} Решить краевую задачу для ограниченной струны: \( \begin{cases} u_{tt} = 4u_{xx} + \cos 2t \,\sin 3x, \\ u|_{x=0} = u|_{x=\frac{\pi}{2}} = 0, & t > 0,\; x \in \left(0,\frac{\pi}{2}\right), \\ u|_{t=0} = 0,\quad u_t|_{t=0} = 2\sin x. \end{cases} \) \end{cond} \TaskTag[todo]{№9.3} \begin{cond} Решить краевую задачу для ограниченной струны: \( \begin{cases} u_{tt} = 9u_{xx} + (2t - 1)\sin 3\pi x, \\ u|_{x=0} = u|_{x=1} = 0, & t > 0,\; x \in (0,1), \\ u|_{t=0} = -\sin 2\pi x,\quad u_t|_{t=0} = 0. \end{cases} \) \end{cond} \TaskTag[todo]{№10.3} \begin{cond} Решить краевую задачу для ограниченной струны: \( \begin{cases} u_{tt} = 4u_{xx} + \cos 2t \,\sin 3x, \\ u|_{x=0} = u|_{x=\frac{\pi}{2}} = 0, & t > 0,\; x \in \left(0,\frac{\pi}{2}\right), \\ u|_{t=0} = 0,\quad u_t|_{t=0} = 2\sin x. \end{cases} \) \end{cond}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\TaskTag[progress]{№1.4}
+\begin{cond}
+	Найти решение задачи Коши:
+
+	\(
+	\begin{cases}
+		u_{tt} = 4\Delta u, \\
+		u|_{t=0} = 2\cos y,\quad u_t|_{t=0} = x - 3y,
+	\end{cases}
+	\qquad
+	u = u(t,x,y),\ (x,y)\in\mathbb{R}^2,\ t>0.
+	\)
+\end{cond}
+
+
+\TaskTag[todo]{№2.4}
+\begin{cond}
+	Найти решение задачи Коши:
+
+	\(
+	\begin{cases}
+		u_{tt} = 9\Delta u - txy, \\
+		u|_{t=0} = 0,\quad u_t|_{t=0} = e^{-2x},
+	\end{cases}
+	\qquad
+	u = u(t,x,y),\ (x,y)\in\mathbb{R}^2,\ t>0.
+	\)
+\end{cond}
+
+\TaskTag[todo]{№3.4}
+\begin{cond}
+	Найти решение задачи Коши:
+
+	\(
+	\begin{cases}
+		u_{tt} = 16\Delta u, \\
+		u|_{t=0} = e^{2x - y},\quad u_t|_{t=0} = 3y^2,
+	\end{cases}
+	\qquad
+	u = u(t,x,y),\ (x,y)\in\mathbb{R}^2,\ t>0.
+	\)
+\end{cond}
+
+\TaskTag[todo]{№4.4}
+\begin{cond}
+	Найти решение задачи Коши:
+
+	\(
+	\begin{cases}
+		u_{tt} = \Delta u + (t+1)^2, \\
+		u|_{t=0} = -\cos 3x\,\sinh y,\quad u_t|_{t=0} = 0,
+	\end{cases}
+	\qquad
+	u = u(t,x,y),\ (x,y)\in\mathbb{R}^2,\ t>0.
+	\)
+\end{cond}
+
+\TaskTag[todo]{№5.4}
+\begin{cond}
+	Найти решение задачи Коши:
+
+	\(
+	\begin{cases}
+		u_{tt} = 25\Delta u - e^{-t}y, \\
+		u|_{t=0} = 0,\quad u_t|_{t=0} = (x+1)^2 (y-1)^2,
+	\end{cases}
+	\qquad
+	u = u(t,x,y),\ (x,y)\in\mathbb{R}^2,\ t>0.
+	\)
+\end{cond}
+
+\TaskTag[todo]{№6.4}
+\begin{cond}
+	Найти решение задачи Коши:
+
+	\(
+	\begin{cases}
+		u_{tt} = 4\Delta u, \\
+		u|_{t=0} = 2\cos y,\quad u_t|_{t=0} = x - 3y,
+	\end{cases}
+	\qquad
+	u = u(t,x,y),\ (x,y)\in\mathbb{R}^2,\ t>0.
+	\)
+\end{cond}
+
+\TaskTag[todo]{№9.4}
+\begin{cond}
+	Найти решение задачи Коши:
+
+	\(
+	\begin{cases}
+		u_{tt} = \Delta u + (t+1)^2, \\
+		u|_{t=0} = -\cos 3x\,\sinh y,\quad u_t|_{t=0} = 0,
+	\end{cases}
+	\qquad
+	u = u(t,x,y),\ (x,y)\in\mathbb{R}^2,\ t>0.
+	\)
+\end{cond}
+
+\TaskTag[todo]{№10.4}
+\begin{cond}
+	Найти решение задачи Коши:
+
+	\(
+	\begin{cases}
+		u_{tt} = 25\Delta u - e^{-t}y, \\
+		u|_{t=0} = 0,\quad u_t|_{t=0} = (x+1)^2 (y-1)^2,
+	\end{cases}
+	\qquad
+	u = u(t,x,y),\ (x,y)\in\mathbb{R}^2,\ t>0.
+	\)
+\end{cond}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\TaskTag[todo]{№1.5}
+\begin{cond}
+	Вычислить производные всех порядков в смысле теории обобщённых функций:
+
+	\(
+	f(x) =
+	\begin{cases}
+		2(x-1)^2, & x \in (0,1), \\
+		0,        & x \ge 1,     \\
+		1,        & x \le 0.
+	\end{cases}
+	\)
+\end{cond}
+
+
+
+\TaskTag[todo]{№2.5}
+\begin{cond}
+	Вычислить производные всех порядков в смысле теории обобщённых функций:
+
+	\(
+	f(x) =
+	\begin{cases}
+		4 - x^2, & x \in (-2,0), \\
+		4,       & x \ge 0,      \\
+		2,       & x \le -2.
+	\end{cases}
+	\)
+\end{cond}
+
+\TaskTag[todo]{№3.5}
+\begin{cond}
+	Вычислить производные всех порядков в смысле теории обобщённых функций:
+
+	\(
+	f(x) =
+	\begin{cases}
+		-(x - 2)^2, & x \in (0,2), \\
+		0,          & x \ge 2,     \\
+		-1,         & x \le 0.
+	\end{cases}
+	\)
+\end{cond}
+
+\TaskTag[todo]{№4.5}
+\begin{cond}
+	Вычислить производные всех порядков в смысле теории обобщённых функций:
+
+	\(
+	f(x) =
+	\begin{cases}
+		4x - x^2, & x \in (0,2), \\
+		4,        & x \ge 2,     \\
+		1,        & x \le 0.
+	\end{cases}
+	\)
+\end{cond}
+
+\TaskTag[todo]{№5.5}
+\begin{cond}
+	Вычислить производные всех порядков в смысле теории обобщённых функций:
+
+	\(
+	f(x) =
+	\begin{cases}
+		3(x+1)^2, & x \in (-1,0), \\
+		1,        & x \ge 0,      \\
+		0,        & x \le -1.
+	\end{cases}
+	\)
+\end{cond}
+
+\TaskTag[todo]{№6.5}
+\begin{cond}
+	Вычислить производные всех порядков в смысле теории обобщённых функций:
+
+	\(
+	f(x) =
+	\begin{cases}
+		2(x+1)^2, & x \in (0,1), \\
+		0,        & x \ge 1,     \\
+		3,        & x \le 0.
+	\end{cases}
+	\)
+\end{cond}
+
+\TaskTag[todo]{№9.5}
+\begin{cond}
+	Вычислить производные всех порядков в смысле теории обобщённых функций:
+
+	\(
+	f(x) =
+	\begin{cases}
+		4x - x^2, & x \in (0,2), \\
+		3,        & x \ge 2,     \\
+		0,        & x \le 0.
+	\end{cases}
+	\)
+\end{cond}
+
+\TaskTag[todo]{№10.5}
+\begin{cond}
+	Вычислить производные всех порядков в смысле теории обобщённых функций:
+
+	\(
+	f(x) =
+	\begin{cases}
+		3(x+1)^2, & x \in (-1,0), \\
+		3,        & x \ge 0,      \\
+		1,        & x \le -1.
+	\end{cases}
+	\)
+\end{cond}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\TaskTag[todo]{№1.6}
+\begin{cond}
+	В пространстве \(D'(\mathbb{R})\) найти общее решение уравнения
+	$y'' + 2y' + 2y = -2\delta'(x)$.
+\end{cond}
+
+\TaskTag[todo]{№2.6}
+\begin{cond}
+	В пространстве \(D'(\mathbb{R})\) найти общее решение уравнения
+	$y'' + 3y' - 4y = 3\delta(x)$.
+\end{cond}
+
+\TaskTag[todo]{№3.6}
+\begin{cond}
+	В пространстве \(D'(\mathbb{R})\) найти общее решение уравнения
+	($\eta(x)$ - функция Хэвисайда)
+	$y'' + 4y' + 4y = -2\eta(x)$.
+\end{cond}
+
+\TaskTag[todo]{№4.6}
+\begin{cond}
+	В пространстве \(D'(\mathbb{R})\) найти общее решение уравнения
+	$y'' - 4y' + 3y = 2\delta'(x)$.
+\end{cond}
+
+\TaskTag[todo]{№5.6}
+\begin{cond}
+	В пространстве \(D'(\mathbb{R})\) найти общее решение уравнения
+	$y'' - 2y' = -4\delta(x)$.
+\end{cond}
+
+\TaskTag[todo]{№6.6}
+\begin{cond}
+	В пространстве \(D'(\mathbb{R})\) найти общее решение уравнения
+	$y'' - 2y' + y = 3\eta(x)$ \;(\(\eta(x)\) — функция Хэвисайда).
+\end{cond}
+
+\TaskTag[todo]{№9.6}
+\begin{cond}
+	В пространстве \(D'(\mathbb{R})\) найти общее решение уравнения ($\eta(x)$ - функция Хэвисайда)
+	$y'' - 9y = -\eta(x)$.
+\end{cond}
+
+\TaskTag[todo]{№10.6}
+\begin{cond}
+	В пространстве \(D'(\mathbb{R})\) найти общее решение уравнения
+	$y'' + 4y = -4\delta(x)$.
+\end{cond}
