--- a/variants/variant1.tex
+++ b/variants/variant1.tex
@@ -62,15 +62,15 @@
 
 \begin{sol}
 
-	\Definition{Пробная-функция}{
+	\Definition{Пробная функция}{
 		функция $\varphi:\mathbb{R}\to\mathbb{R}$,
 		бесконечно дифференцируемая и имеющая компактный носитель ($\varphi(x)=0$ вне некоторого отрезка).
 	}
 
 	\Definition{Обобщённая функция}{
-		непрерывный линейный функционал $f: D(\mathbb{R})\to\mathbb{R}$,
-		$\varphi\mapsto\langle f, \varphi \rangle$,
-		Здесь $D(\mathbb{R})$ -- пространство пробная-функций $\varphi$.
+		непрерывный линейный функционал $T: D(\mathbb{R})\to\mathbb{R}$,
+		$\varphi\mapsto\langle T, \varphi \rangle$.
+		Здесь $D(\mathbb{R})=C_c^\infty(\mathbb{R})$ -- пространство пробных функций $\varphi$.
 	}
 
 	\Definition{Дельта-функция Дирака}{
@@ -82,10 +82,10 @@
 	}
 
 	\Definition{Производная обобщённой функции}{
-		новая обобщённая функция $f'$,
-		действующая на пробная-функции $\varphi \in D(\mathbb{R})$ по правилу
-		$\langle f', \varphi \rangle = -\,\langle f, \varphi' \rangle$.
-		Где $f$ — исходная обобщённая функция на $\mathbb{R}$.
+		новая обобщённая функция $T'$,
+		действующая на пробные функции $\varphi \in D(\mathbb{R})$ по правилу
+		$\langle T', \varphi \rangle = -\,\langle T, \varphi' \rangle$.
+		Где $T$ — исходная обобщённая функция на $\mathbb{R}$.
 	}
 
 	$f\in L_{loc}^1(\mathbb{R})$ кусочно $C^2$ и имеет разрывы лишь в точках $x=a_i$.
@@ -104,8 +104,9 @@
 		= \langle \sum_i [f]_{a_i}\delta_{a_i},\,\varphi \rangle
 	$.
 
-	Так же
-	$\sum_i\int_{a_i}^{a_{i+1}} f(x)'\varphi(x)dx = \langle \{f'\}, \varphi \rangle$
+	Также
+	$\sum_i\int_{a_i}^{a_{i+1}} f(x)'\varphi(x)dx = \langle \{f'\}, \varphi \rangle$.
+	И $\langle \delta_a^{(m)}, \varphi \rangle = (-1)^m\,\varphi^{(m)}(a)$.
 
 	$f'=\{f'\}+\sum_i([f]_{a_i}\delta_{a_i})$.
 
@@ -113,9 +114,8 @@
 
 	$f^{(3)}=\{f^{(3)}\}+\sum_i([f'']_{a_i}\delta_{a_i})+\sum_i([f']_{a_i}\delta'_{a_i})+\sum_i([f]_{a_i}\delta''_{a_i})$.
 
-	$f^{(k)}=\sum_i([f'']_{a_i}\delta^{(k-3)}_{a_i}+[f']_{a_i}\delta^{(k-2)_{a_i}}+[f]_{a_i}\delta^{(k-1)}_{a_i})$.
-	$k\leq4$.
-	Поскольку $C^2$.
+	$f^{(k)}=\sum_i([f'']_{a_i}\delta^{(k-3)}_{a_i}+[f']_{a_i}\delta^{(k-2)}_{a_i}+[f]_{a_i}\delta^{(k-1)}_{a_i})$.
+	$k\geq4$.
 
 	% начало реального решения
 	$
@@ -127,10 +127,10 @@
 		\end{cases}
 	$;
 	$
-		\{f'\}=4(x-1), x \in (0,1)
+		\{f'\}=4(x-1){\chi_{(0,1)}(x)}
 	$;
 	$
-		\{f''\}=4, x \in (0,1)
+		\{f''\}=4{\chi_{(0,1)}(x)}
 	$.
 
 	Скачки:
@@ -150,15 +150,15 @@
 \end{sol}
 
 \begin{out}
-
-	$f'=\{f'\}+\delta(x)$.
-
-	$f''=\{f''\}-4\,\delta(x)+\delta'(x)$
-
-	$f^{(3)}=4\delta(x)-4\delta(x-1)-4\delta'(x)+\delta''(x).$
-
-	$f^{(k)}=4\delta^{(k-3)}(x)-4\delta^{(k-3)}(x-1)-4\delta^{(k-2)}(x)+\delta^{(k-1)}(x)$,
-	$k\ge4$.
+	\[
+		\boxed{
+			\begin{aligned}
+				f'      & =4(x-1){\chi_{(0,1)}(x)}+\delta(x),                                                           \\
+				f''     & =4{\chi_{(0,1)}(x)}-4\,\delta(x)+\delta'(x),                                                  \\
+				f^{(3)} & =4\,\delta(x)-4\,\delta(x-1)-4\,\delta'(x)+\delta''(x),                                       \\
+				f^{(k)} & =4\,\delta^{(k-3)}(x)-4\,\delta^{(k-3)}(x-1)-4\,\delta^{(k-2)}(x)+\delta^{(k-1)}(x),\ k\ge 4.
+			\end{aligned}}
+	\]
 \end{out}
 
 \newpage
